# lensflare

./: Cargo.toml  README.md  dust.xcf
src/: app.rs  arc.rs  bind_group.rs  buffer.rs  camera.rs  colors.rs  fullscreen.wgsl  ghost.rs  grids.rs  hot_reload.rs  lib.rs  lines.wgsl  main.rs  mesh.rs  registry.rs  render_pipeline_descriptor.rs  shader.wgsl  shaders.rs  starburst.rs  starburst_pipeline.rs  state.rs  texture.rs  uniforms.rs  utils.rs  vertex.rs
src/fft/: angular_spectrum.rs  complex.rs  cpu.rs  fresnel.rs  frft.rs  mod.rs  utils.rs  wgpu.rs
src/lenses/: mod.rs
src/shaders/: camera.wesl  camera.wgsl  colors.wesl  colors.wgsl  complex.wesl  complex_normalize.wesl  copy_to_complex.wesl  fft.wesl  fullscreen.wesl  fullscreen.wgsl  generate_frequencies.wesl  ghost.wesl  ghost_sdf.wesl  lenses.wesl  lenses.wgsl  lenses_types.wesl  lines.wesl  lines.wgsl  multiply_complex.wesl  render_ghosts.wesl  render_starburst.wesl  shader.wesl  shader.wgsl  starburst.wesl  starburst_filter.wesl  texture_multiply_add.wesl  texture_multiply_const.wesl  utils.wesl  utils.wgsl
src/software/: mod.rs  trace_iterator.rs
